Add max inline size

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,5 +22,7 @@ import BaseLayout from "~/layouts/BaseLayout.astro";
 <style>
   main {
     padding: 1.5rem;
+    max-inline-size: 40rem;
+    margin-inline: auto;
   }
 </style>
