--- a/src/pages/sine.astro
+++ b/src/pages/sine.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "~/layouts/BaseLayout.astro";
+import BaseLayout from '~/layouts/BaseLayout.astro'
 ---
 
 <BaseLayout title="P5 Experiments" description="p5p5p5p5p5p5p5p5">
